# Navi-Gestures

./: .gitignore  README.md  app.py  gesture_model.pkl  main.py  pyproject.toml
gesture_control/: __init__.py  controller.py  data_collector.py  trainer.py  utils.py
